[project]
name = "moviepy_layouters"
version = "0.0.1"
authors = [
  { name="HenrySck075" },
]
description = "MoviePy but like if you add Flutter into it"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "moviepy>=2.2.1",
    "numpy>=2.2.5",
    "Pillow>=8.0.0",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/HenrySck075/moviepy-layouters"
Issues = "https://github.com/HenrySck075/moviepy-layouters/issues"
